# OOP_Restaurant

./: CMakeLists.txt  main.cpp
Client/: Client.cpp  Client.h
Comanda/: Comanda.cpp  Comanda.h
ExceptionInput/: ExceptionInput.cpp  ExceptionInput.h
Helper/: Helper.cpp  Helper.h
Ingredient/: Ingredient.csv  Ingrediente.cpp  Ingrediente.h
Meniu/: Meniu.cpp  Meniu.h
Preparate/: Bautura.csv  Mancare.csv  Preparat.csv  Preparate.cpp  Preparate.h
Rapoarte/: CalculProfit.txt  Clienti.txt  ComenziInregistrate.txt  TopPreparate.txt
